; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl871x_xmit.c_r8712_put_snap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl871x_xmit.c_r8712_put_snap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_snap_hdr = type { i32, i32, i32, i32* }

@P802_1H_OUI = common dso_local global i32* null, align 8
@RFC1042_OUI = common dso_local global i32* null, align 8
@SNAP_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @r8712_put_snap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r8712_put_snap(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee80211_snap_hdr*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = bitcast i32* %7 to %struct.ieee80211_snap_hdr*
  store %struct.ieee80211_snap_hdr* %8, %struct.ieee80211_snap_hdr** %5, align 8
  %9 = load %struct.ieee80211_snap_hdr*, %struct.ieee80211_snap_hdr** %5, align 8
  %10 = getelementptr inbounds %struct.ieee80211_snap_hdr, %struct.ieee80211_snap_hdr* %9, i32 0, i32 0
  store i32 170, i32* %10, align 8
  %11 = load %struct.ieee80211_snap_hdr*, %struct.ieee80211_snap_hdr** %5, align 8
  %12 = getelementptr inbounds %struct.ieee80211_snap_hdr, %struct.ieee80211_snap_hdr* %11, i32 0, i32 1
  store i32 170, i32* %12, align 4
  %13 = load %struct.ieee80211_snap_hdr*, %struct.ieee80211_snap_hdr** %5, align 8
  %14 = getelementptr inbounds %struct.ieee80211_snap_hdr, %struct.ieee80211_snap_hdr* %13, i32 0, i32 2
  store i32 3, i32* %14, align 8
  %15 = load i32, i32* %4, align 4
  %16 = icmp eq i32 %15, 33079
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = icmp eq i32 %18, 33011
  br i1 %19, label %20, label %22

20:                                               ; preds = %17, %2
  %21 = load i32*, i32** @P802_1H_OUI, align 8
  store i32* %21, i32** %6, align 8
  br label %24

22:                                               ; preds = %17
  %23 = load i32*, i32** @RFC1042_OUI, align 8
  store i32* %23, i32** %6, align 8
  br label %24

24:                                               ; preds = %22, %20
  %25 = load i32*, i32** %6, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.ieee80211_snap_hdr*, %struct.ieee80211_snap_hdr** %5, align 8
  %29 = getelementptr inbounds %struct.ieee80211_snap_hdr, %struct.ieee80211_snap_hdr* %28, i32 0, i32 3
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 0
  store i32 %27, i32* %31, align 4
  %32 = load i32*, i32** %6, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 1
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.ieee80211_snap_hdr*, %struct.ieee80211_snap_hdr** %5, align 8
  %36 = getelementptr inbounds %struct.ieee80211_snap_hdr, %struct.ieee80211_snap_hdr* %35, i32 0, i32 3
  %37 = load i32*, i32** %36, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 1
  store i32 %34, i32* %38, align 4
  %39 = load i32*, i32** %6, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 2
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.ieee80211_snap_hdr*, %struct.ieee80211_snap_hdr** %5, align 8
  %43 = getelementptr inbounds %struct.ieee80211_snap_hdr, %struct.ieee80211_snap_hdr* %42, i32 0, i32 3
  %44 = load i32*, i32** %43, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 2
  store i32 %41, i32* %45, align 4
  %46 = load i32, i32* %4, align 4
  %47 = call i32 @htons(i32 %46)
  %48 = load i32*, i32** %3, align 8
  %49 = load i32, i32* @SNAP_SIZE, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %48, i64 %50
  store i32 %47, i32* %51, align 4
  %52 = load i32, i32* @SNAP_SIZE, align 4
  %53 = sext i32 %52 to i64
  %54 = add i64 %53, 4
  %55 = trunc i64 %54 to i32
  ret i32 %55
}

declare dso_local i32 @htons(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
